swagger todo api for todos/:id
