# openapi.json
@@ -321,6 +321,38 @@
           }
         }
       }
+    },
+    "/todos/{todoId}": {
+      "get": {
+        "tags": [
+          "Todos"
+        ],
+        "summary": "Get a todo.",
+        "parameters": [
+          {
+            "name": "todoId",
+            "in": "path",
+            "description": "Id of todo to retrive.",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
